@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.wdrrockpalast" name="WDR Rockpalast" version="1.0.8" provider-name="xycl">
+<addon id="plugin.video.wdrrockpalast" name="WDR Rockpalast" version="1.0.9" provider-name="xycl">
     <requires>
         <import addon="xbmc.python" version="2.0"/>
     </requires>
