@@ -1,3 +1,6 @@
+[B]v1.0.9 (20.12.2012)[/B]
+- Change: Video now played via url and listitem entry
+
 [B]v1.0.8 (19.12.2012)[/B]
 - Change: Video now played via playlist
 
